Command line scripts and added dependencies of the package

--- a/settings.ini
+++ b/settings.ini
@@ -21,9 +21,10 @@ license = bsd3
 status = 2
 
 # Optional. Same format as setuptools requirements
-# requirements = 
+requirements = numpy="~=1.23" pandas="~=1.5" networkx="~=2.8" scikit-bio==0.5.8 fastcore="~=1.5" redis>=4.4.1 PyYAML="~=6"
+dev_requirements = nbdev>=2 jupyter
 # Optional. Same format as setuptools console_scripts
-# console_scripts = 
+console_scripts = pantograph=pangraph_constructor.scripts:pantograph_script
 
 ###
 # You probably won't need to change anything under here,
