Fixed dependencies format
Fixed dependencies format

--- a/settings.ini
+++ b/settings.ini
@@ -21,7 +21,7 @@ license = apache2
 status = 4
 
 # Optional. Same format as setuptools requirements
-requirements = numpy="~=1.23" pandas="~=1.5" networkx="~=2.8" scikit-bio==0.5.8 fastcore="~=1.5" redis>=4.4.1 PyYAML="~=6"
+requirements = numpy~=1.23 pandas~=1.5 networkx~=2.8 scikit-bio==0.5.8 fastcore~=1.5 redis>=4.4.1 PyYAML>=6,<7
 dev_requirements = nbdev>=2 jupyter
 # Optional. Same format as setuptools console_scripts
 console_scripts = pantograph=pygengraph.scripts:pantograph_script
