Cleaned and updated documentation

--- a/nbdev.yml
+++ b/nbdev.yml
@@ -6,4 +6,4 @@ website:
   site-url: "//pygengraph"
   description: "A package for genome graph constrcution and processing aimed at building highly non-linear graphs for analysis and visualisation of large structural variations (SVs) and synteny blocks."
   repo-branch: master
-  repo-url: "https://gitlab.com/pigrenok/pygengraph/tree/master/"
+  repo-url: "https://github.com/pigrenok/pygengraph/tree/master/"
